--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "mdbreact": "^5.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-images": "^1.2.0-beta.7",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "8.0.1",
