--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "mdbreact": "^5.1.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.7.1",
     "react-images": "^1.2.0-beta.7",
+    "react-lite-youtube-embed": "^2.1.0",
     "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
