--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "emailjs-com": "^3.2.0",
     "mdbreact": "^5.1.0",
     "next": "11.1.2",
