--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
 # local env files
 .env
 .env.local
@@ -33,3 +34,7 @@ yarn-error.log*
 
 # vercel
 .vercel
+yarn.lock
+*.lock
+*.lock
+yarn.lock
